@@ -144,10 +144,6 @@ enum kwsub
 #define large_memory 0
 #endif
 
-/* Do `struct stat' `s' and `t' describe the same file?  */
-#define same_file(s,t)  ((s).st_ino == (t).st_ino       \
-                         && (s).st_dev == (t).st_dev)
-
 /* Filename component separation.
    TMPDIR       string           Default directory for temporary files.
    SLASH        char             Principal filename separator.
