@@ -1,3 +1,9 @@
+2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Use gnulib module `same-inode'.
+
+	* m4/gnulib-cache.m4 (gl_MODULES): Add `same-inode'.
+
 2010-04-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Use gnulib module `sys_wait'.
